src/objects/loan__Accounting_Segment_Setup__c.object
<CustomObject>
    <description>Accounting segment setup</description>
    <fields>
        <fullName>loan__Accounting_Segmentation__c</fullName>
        <description>Accounting Segmentation</description>
        <inlineHelpText>Accounting Segmentation</inlineHelpText>
        <label>Accounting Segmentation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Balancing_Segment_Number__c</fullName>
        <label>Balancing Segment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Delimiter__c</fullName>
        <description>Delimiter</description>
        <inlineHelpText>Delimiter</inlineHelpText>
        <label>Delimiter</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Segment1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment1</label>
        <referenceTo>loan__Value_Sets__c</referenceTo>
        <relationshipLabel>Accounting Segment Setup</relationshipLabel>
        <relationshipName>Accounting_Segment_Setup_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Segment2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment2</label>
        <referenceTo>loan__Value_Sets__c</referenceTo>
        <relationshipLabel>Accounting Segment Setup (Segment2)</relationshipLabel>
        <relationshipName>Accounting_Segment_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Segment3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment3</label>
        <referenceTo>loan__Value_Sets__c</referenceTo>
        <relationshipLabel>Accounting Segment Setup (Segment3)</relationshipLabel>
        <relationshipName>Accounting_Segment_Setup1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Accounting Segment Setup</label>
    <nameField>
        <displayFormat>ASID-{0000}</displayFormat>
        <label>Accounting Segment Setup ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Segment Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Check_Balancing_Segment_Number</fullName>
        <active>true</active>
        <description>Balancing Segment Number cannot be greater than 7</description>
        <errorConditionFormula>loan__Balancing_Segment_Number__c &gt; 7</errorConditionFormula>
        <errorMessage>Balancing Segment Number cannot be greater than 7</errorMessage>
    </validationRules>
</CustomObject>